# flatagents

./: .gitignore  MACHINES.md  README.md  VERIFICATION_GUIDE.md  VERIFICATION_README.md  example_machine.cfg  example_machine.tla  example_verifier.py  flatagent.d.ts  flatagents-runtime.d.ts  flatmachine.d.ts  flatmachine_semantics.lisp  flatmachine_to_tla.py  profiles.d.ts  test_machine_properties.py
.plumb/: config.json
assets/: flatagent.d.ts  flatagents-runtime.d.ts  flatagents-runtime.schema.json  flatagents-runtime.slim.d.ts  flatmachine.d.ts  flatmachine.slim.d.ts  profiles.d.ts
docs/design/: METRICS_BACKEND_PLAN.md  SIGNAL_TRIGGER_ACTIVATION_BACKENDS.md  TOOL_USE.md
docs/done/: PLAN_signals.md
scripts/: update-spec-versions.sh
sdk/examples/coding_agent_cli/python/: pyproject.toml
sdk/examples/coding_agent_cli/python/src/tool_use_cli/: tools.py
sdk/examples/dfss_deepsleep/: scheduler_machine.py  task_machine.py
sdk/examples/dfss_deepsleep/python/: README.md  pyproject.toml  run.sh
sdk/examples/dfss_deepsleep/python/src/flatagent_dfss_deepsleep/: __init__.py  hooks.py  main.py
sdk/examples/dfss_deepsleep/python/tests/unit/: _helpers.py  test_hooks.py  test_scheduler_machine.py  test_task_machine.py
sdk/examples/dfss_pipeline/: README.md  hooks.py  main.py  scheduler.py  task_machine.py  test.sh  workflow_plan.py
sdk/examples/dynamic_tool_machine/python/: README.md  pyproject.toml  run.sh
sdk/examples/dynamic_tool_machine/python/src/clone_machine/: invoker.py  main.py  tools.py
sdk/examples/dynamic_tool_machine/python/src/dynamic_tool_machine/: main.py  tools.py
sdk/examples/dynamic_tool_machine/python/test/unit/: conftest.py  run.sh  test_tools.py
sdk/examples/listener_os/python/: README.md  pyproject.toml  run.sh
sdk/examples/listener_os/python/src/listener_os/: __init__.py  main.py
sdk/examples/rlm_v2/: .gitignore  PLAN.md  RESEARCH_QA_IMPROVEMENTS.md  REVIEW.md  RLM_DIGEST.md
sdk/examples/rlm_v2/python/: PLAN_RUNTIME_WARNING_SUPPRESSION_LITELLM_BKG_LOGGER.md  README.md  RESEARCH_QA_README.md  pyproject.toml  research.sh  watch_20260219-004945  watch_research_status.sh
sdk/examples/rlm_v2/python/src/rlm_v2/: hooks.py  main.py  repl.py  research_qa.py
sdk/examples/rlm_v2/python/tests/unit/: test_hooks.py  test_repl.py  test_research_qa.py
sdk/examples/tool_loop/python/: README.md  pyproject.toml  run.sh
sdk/examples/tool_loop/python/src/flatagent_tool_loop/: main.py  tools.py
sdk/go/: go.mod
sdk/go/flatagent/: agent.go  agent_test.go  examples_test.go
sdk/go/flatmachine/: machine.go  machine_test.go
sdk/go/profiles/: profiles.go  profiles_test.go
sdk/go/template/: render.go  render_test.go
sdk/go/types/: types.go  types_test.go
sdk/js/: MACHINES.md  README.md  package-lock.json  package.json
sdk/js/schemas/: flatagent.d.ts  flatagent.slim.d.ts  flatagents-runtime.d.ts  flatagents-runtime.slim.d.ts  flatmachine.d.ts  flatmachine.slim.d.ts  profiles.d.ts  profiles.slim.d.ts
sdk/js/src/: flatagent.ts  flatmachine.ts  types.ts
sdk/python/: pyproject.toml
sdk/python/examples/webhook_callback/: .gitignore  README.md  pyproject.toml  run.sh
sdk/python/examples/webhook_callback/config/: machine.yml  processor.yml
sdk/python/examples/webhook_callback/src/webhook_callback/: __init__.py  hooks.py  main.py
sdk/python/examples/webhook_callback/src/webhook_callback/backends/: __init__.py  base.py  mock.py  polling.py  webhook.py
sdk/python/examples/zig_python_capi/: .gitignore  DEMO.md  README.md  pyproject.toml  run.sh  test_structure.py
sdk/python/examples/zig_python_capi/config/: analyzer.yml  machine.yml  task_generator.yml
sdk/python/examples/zig_python_capi/src/zig_python_capi/: __init__.py  main.py
sdk/python/examples/zig_python_capi/zig_src/: Makefile  build.zig  prime_compute.zig
sdk/python/flatagents/: README.md  flatagent.py  flatmachine.py  hooks.py  pyproject.toml
sdk/python/flatmachines/: MACHINES.md  README.md  pyproject.toml
(+143 files in other folders)
