[project]
name = "flatagent_dfss_deepsleep"
version = "0.1.0"
description = "DFSS Deep Sleep demo — checkpoint-and-exit scheduling with signals."
dependencies = ["flatmachines[flatagents]"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
dfss-deepsleep-demo = "flatagent_dfss_deepsleep.main:main"
