[project]
name = "dynamic_tool_machine"
version = "0.1.0"
description = "Minimal machine-level tool loop with discovery"
dependencies = ["flatmachines[flatagents]", "flatagents[litellm]"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
dynamic-tool-machine = "dynamic_tool_machine.main:main"
