[project]
name = "listener_os"
version = "0.1.0"
description = "OS listener demo for FlatMachines signal dispatch"
dependencies = ["flatmachines"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
listener-os-demo = "listener_os.main:main"
