[project]
name = "rlm-v2-example"
version = "0.1.0"
description = "Minimal Recursive Language Model v2 example using FlatMachines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flatmachines[flatagents]",
    "flatagents[litellm]",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
rlm-v2-demo = "rlm_v2.main:main"
rlm-v2-research = "rlm_v2.research_qa:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rlm_v2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
