[project]
name = "webhook_callback"
version = "0.1.0"
description = "Long-running job with callback/polling example for FlatAgents"
dependencies = ["flatagents[litellm]", "httpx>=0.27.0", "aiohttp>=3.9.0"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
webhook-callback-demo = "webhook_callback.main:main"
